# Audio2Text

./: .env.example  .gitignore  LICENSE  Package.swift  README.md  VERSION.txt
Sources/Audio2TxtApp/: AppSettings.swift  Audio2TxtApp.swift  ContentView.swift
Sources/Audio2TxtCore/: Crypto.swift  EnvLoader.swift  Models.swift  SummaryKeywordExtractor.swift  TOSClient.swift  TranscriptFormatter.swift  TranscriptionCoordinator.swift  TranslationFormatter.swift  VolcMinutesClient.swift
Tests/Audio2TxtTests/: TranscriptFormatterTests.swift
scripts/: package-macos.sh
windows-app/: README.md  main.js  package-lock.json  package.json  preload.js
windows-app/lib/: service.js
windows-app/src/: index.html  renderer.js  styles.css
windows-cpp-app/: CMakeLists.txt  README.md
windows-cpp-app/include/: AppSettings.h  TranscriptionService.h
windows-cpp-app/src/: AppSettings.cpp  TranscriptionService.cpp  main.cpp
